deploy: 34b9dbb4a0df241d431b12420517ddb51712f215

--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Page not found - Oura</title>
+        <title>Page not found - Dolos</title>
         <base href="/">
 
 
@@ -110,7 +110,7 @@
                         </button>
                     </div>
 
-                    <h1 class="menu-title">Oura</h1>
+                    <h1 class="menu-title">Dolos</h1>
 
                     <div class="right-buttons">
                         <a href="print.html" title="Print this book" aria-label="Print this book">
